FLUID-5754: Fix namespacing of selectors, file naming

--- a/examples/framework/preferences/minimalEditor/css/style.css
+++ b/examples/framework/preferences/minimalEditor/css/style.css
@@ -1,15 +1,15 @@
-.me-instructions {
+.awe-instructions {
     background-color: #EEEEEE;
     padding: 1em;
     width: 50em;
 }
 
-.me-panel {
+.awe-panel {
     padding: 1em;
     border: 1px solid black;
     width: 50%;
 }
 
-.me-save {
+.awe-save {
     margin: 1em;
 }
